# Compiler-For-SysY

./: CMakeLists.txt  Makefile  lib.c  llvm_ir.txt  main  main.cpp  mips.txt  output  output.ll  output.txt  testfile.txt
backend/: CMakeLists.txt  mips.cpp  translate.cpp
frontend/: CMakeLists.txt  check.cpp  lexer.cpp  table.cpp
include/: check.h  generate.h  graph.h  ir.h  mem2reg.h  mips.h  token.h  translate.h
middle/: CMakeLists.txt  constant.cpp  generate.cpp  graph.cpp  ir.cpp  mem2reg.cpp  tools.cpp
src/: main  main.cpp
src/backend/: Makefile
src/backend/include/: translate.h
src/backend/src/: mips.cpp  translate.cpp
src/frontend/: Makefile
src/frontend/include/: analyser.h  check.h  func.h  lexer.h  node.h  table.h  var.h
src/frontend/src/: analyser.cpp  check.cpp  lexer.cpp  node.cpp  table.cpp
src/middle/: Makefile
src/middle/include/: generate.h  ir.h
src/middle/src/: generate.cpp  ir.cpp  tools.cpp
tmp/: analyser.cpp  check.cpp  generate.cpp  generate.h  ir.cpp  ir.h  main.cpp  node.cpp  table.h  token.h  tools.cpp  translate.cpp  translate.h
